--- a/search.html
+++ b/search.html
@@ -45,7 +45,7 @@
   <div class="container">
     <h1 class="text-xl font-bold mb-4 text-pink-600 drop-shadow text-center">
       🔎 Prefect Duties Search (Cafe, Assembly, Latecomers) 
-      <span class="text-lg text-gray-600 font-normal"> (⛘ Not for Probies)</span>
+      <span class="text-lg text-gray-600 font-normal"> (Not for Probies)</span>
     </h1>
 
     <div class="mb-6 flex flex-col sm:flex-row gap-2 w-full items-center justify-center">
@@ -64,8 +64,8 @@
         <tr>
           <th class="px-4 py-2">Sheet</th>
           <th class="px-4 py-2">Name</th>
-          <th class="px-4 py-2">Duties / Details</th>
-          <th class="px-4 py-2">Extra</th>
+          <th class="px-4 py-2">Duties</th>
+          <th class="px-4 py-2">Details</th>
           <th class="px-4 py-2">Row Info</th>
         </tr>
       </thead>
