--- a/search.html
+++ b/search.html
@@ -10,22 +10,18 @@
       max-width: 480px;
       width: 100%;
     }
-
     body {
       font-size: 0.92rem;
     }
-
     .sparkle {
       animation: sparkle 1s infinite alternate;
       box-shadow: 0 0 20px 4px rgba(255, 255, 255, 0.8), 0 0 8px 2px #ff00ff;
       border-color: gold !important;
     }
-
     @keyframes sparkle {
       0% { filter: brightness(1); transform: scale(1); }
       100% { filter: brightness(1.3); transform: scale(1.01); }
     }
-
     .shine {
       background: linear-gradient(90deg, #fcfcfc, #800080, #ffffa1, #c3b1e2);
       background-size: 250% auto;
@@ -34,7 +30,6 @@
       -webkit-background-clip: text;
       animation: shine 4s linear infinite;
     }
-
     @keyframes shine {
       0% { background-position: 200% center; }
       100% { background-position: -200% center; }
@@ -45,9 +40,8 @@
   <div class="container">
     <h1 class="text-xl font-bold mb-4 text-pink-600 drop-shadow text-center">
       🔎 Prefect Duties Search (Cafe, Assembly, Latecomers) 
-      <span class="text-lg text-gray-600 font-normal"> (Not for Probies)</span>
+      <span class="text-lg text-gray-600 font-normal"> (⛘ Not for Probies)</span>
     </h1>
-
     <div class="mb-6 flex flex-col sm:flex-row gap-2 w-full items-center justify-center">
       <input id="searchInput" type="text" placeholder="Your name..."
         class="border border-gray-300 rounded px-2 py-2 text-base focus:outline-none shadow-sm w-48" />
@@ -56,45 +50,38 @@
       </button>
     </div>
   </div>
-
-  <!-- Dynamic Results Table -->
   <div class="w-full max-w-6xl mx-auto mt-6">
     <table class="min-w-full text-sm text-left text-gray-800 shadow-md rounded-lg overflow-hidden">
       <thead class="bg-purple-100 text-purple-700 uppercase text-xs">
         <tr>
           <th class="px-4 py-2">Sheet</th>
           <th class="px-4 py-2">Name</th>
-          <th class="px-4 py-2">Duties</th>
+          <th class="px-4 py-2">Duty</th>
           <th class="px-4 py-2">Details</th>
           <th class="px-4 py-2">Row Info</th>
         </tr>
       </thead>
-      <tbody id="results" class="bg-white divide-y divide-gray-200">
-        <!-- JS will populate this -->
-      </tbody>
+      <tbody id="results" class="bg-white divide-y divide-gray-200"></tbody>
     </table>
   </div>
-
   <footer class="mt-10 text-sm text-gray-800 font-bold">
-    <p id="updatedDate" class="mt-2 text-sm text-gray-800 font-bold">
-      Updated on : 13 April 2025
-    </p>
+    <p id="updatedDate" class="mt-2 text-sm text-gray-800 font-bold">Updated on : 13 April 2025</p>
     <p class="mt-2 text-sm text-gray-500 font-normal">
-      Note: Search using your unique name (e.g. Aki Ai, reza, or oznur instead of eliza because there is a probie Elizabeth). The duties in the current month will ✨sparkle✨, Use at your own discretion. If you see incomplete data that means the main dutysheet is incomplete as well. Suggestions always welcome (and I won’t say no to free coffee).
+      Note: Search using your unique name (e.g. Aki Ai, reza, or oznur instead of eliza because there is a probie Elizabeth). The duties in the current month will ✨sparkle✨. Use at your own discretion. If you see incomplete data that means the main dutysheet is incomplete as well. Suggestions always welcome (and I won’t say no to free coffee).
     </p>
-    <p class="mt-7 text-center text-sm font-semibold shine">
-      an initiative by Tan Sebastian Poe Ryu© 
-    </p>
+    <p class="mt-7 text-center text-sm font-semibold shine">an initiative by Tan Sebastian Poe Ryu©</p>
   </footer>
-
   <script>
     const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
-
     const sheetConfigs = [
       { sheetId: "11pxAig2ID-c8vigH-5ADpOeshg8GkirngYnAt07iBSA", name: "APR 25", label: "Latecomers", range: "A1:Z1000", colMatch: "any", left: 2 },
       { sheetId: "1mMXUsCn9_TIsB8BXHreUiAsy_N0B8tDsiCkKmcLEcJc", name: "AS 15-4  floor markers duty ", label: "Assembly", range: "A1:Z1000", colMatch: "any", left: 2 },
       { sheetId: "1UkNYiSuW_hNHcCxlssbUstyrhUBRLePJVCgOYwYmpVc", name: "LOWER SEC APR", label: "Break/Lunch", range: "A1:Z1000", colMatch: 2, left: 1 },
-      { sheetId: "1UkNYiSuW_hNHcCxlssbUstyrhUBRLePJVCgOYwYmpVc", name: "UPPER SEC APR", label: "Break/Lunch", range: "A1:Z1000", colMatch: 2, left: 1 }
+      { sheetId: "1UkNYiSuW_hNHcCxlssbUstyrhUBRLePJVCgOYwYmpVc", name: "UPPER SEC APR", label: "Break/Lunch", range: "A1:Z1000", colMatch: 2, left: 1 },
+      { sheetId: "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo", name: "ONSITE - CAFETERIA (A)", label: "Break/Lunch & Probies A", range: "A1:Z1000", colMatch: "any", dutyOffset: -1, detailOffsets: [-2, -3] },
+      { sheetId: "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo", name: "ONSITE - CAFETERIA (B)", label: "Break/Lunch & Probies B", range: "A1:Z1000", colMatch: "any", dutyOffset: -1, detailOffsets: [-2, -3] },
+      { sheetId: "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo", name: "ONSITE - ASSEMBLY", label: "Assembly & Probies", range: "A1:Z1000", colMatch: "any", dutyOffset: -1, detailOffsets: [3] },
+      { sheetId: "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo", name: "ONSITE - LATECOMERS", label: "Latecomers & Probies", range: "A1:Z1000", colMatch: "any", dutyOffset: -3, detailOffsets: [3] }
     ];
 
     async function fetchSheet(sheetId, sheetName, range) {
@@ -107,9 +94,7 @@
 
     function getMergedSafeValue(data, row, colIndex) {
       while (row >= 0) {
-        if (data[row] && data[row][colIndex]) {
-          return data[row][colIndex];
-        }
+        if (data[row] && data[row][colIndex]) return data[row][colIndex];
         row--;
       }
       return "";
@@ -121,59 +106,44 @@
       resultsDiv.innerHTML = "";
       if (!term) return;
 
-      for (let i = 0; i < sheetConfigs.length; i++) {
-        const { sheetId, name, label, range, colMatch, left } = sheetConfigs[i];
+      for (const config of sheetConfigs) {
+        const { sheetId, name, label, range, colMatch, dutyOffset, detailOffsets, left } = config;
         try {
           const data = await fetchSheet(sheetId, name, range);
           data.forEach((row, rowIndex) => {
             if (!row) return;
-
-            if (colMatch === "any") {
-              row.forEach((cell, colIndex) => {
-                if (cell?.toLowerCase().includes(term)) {
-                  const leftData = [];
-                  for (let j = 1; j <= left; j++) {
-                    const leftCol = colIndex - j;
-                    if (leftCol >= 0) {
-                      leftData.push(getMergedSafeValue(data, rowIndex, leftCol));
-                    }
-                  }
-                  const tr = document.createElement("tr");
-                  tr.innerHTML = `
-                    <td class="px-4 py-2">${label}</td>
-                    <td class="px-4 py-2 font-semibold">${cell}</td>
-                    <td class="px-4 py-2">${leftData.reverse().map(d => `🔎 ${d}`).join("<br>")}</td>
-                    <td class="px-4 py-2">-</td>
-                    <td class="px-4 py-2 text-xs text-gray-500">Row ${rowIndex + 2}, Col ${colIndex + 1}</td>
-                  `;
-                  resultsDiv.appendChild(tr);
+            row.forEach((cell, colIndex) => {
+              if (cell?.toLowerCase().includes(term)) {
+                let duty = "-";
+                let details = [];
+                if (dutyOffset !== undefined) {
+                  duty = getMergedSafeValue(data, rowIndex, colIndex + dutyOffset);
+                } else if (typeof left === 'number') {
+                  duty = getMergedSafeValue(data, rowIndex, colIndex - 1);
                 }
-              });
-            } else if (row[colMatch]?.toLowerCase().includes(term)) {
-              const match = row[colMatch];
-              const leftData = [];
-              if (colMatch > 0) {
-                leftData.push(getMergedSafeValue(data, rowIndex, colMatch - 1));
+                if (Array.isArray(detailOffsets)) {
+                  details = detailOffsets.map(offset => getMergedSafeValue(data, rowIndex, colIndex + offset));
+                } else if (typeof left === 'number') {
+                  details = [];
+                  for (let j = 2; j <= left; j++) {
+                    const col = colIndex - j;
+                    if (col >= 0) details.push(getMergedSafeValue(data, rowIndex, col));
+                  }
+                }
+                const tr = document.createElement("tr");
+                tr.innerHTML = `
+                  <td class="px-4 py-2">${label}</td>
+                  <td class="px-4 py-2 font-semibold">${cell}</td>
+                  <td class="px-4 py-2">🔎 ${duty}</td>
+                  <td class="px-4 py-2">${details.map(d => `🔎 ${d}`).join("<br>")}</td>
+                  <td class="px-4 py-2 text-xs text-gray-500">Row ${rowIndex + 2}, Col ${colIndex + 1}</td>
+                `;
+                resultsDiv.appendChild(tr);
               }
-
-              let detailText = "-";
-              if (sheetId === "1UkNYiSuW_hNHcCxlssbUstyrhUBRLePJVCgOYwYmpVc") {
-                detailText = rowIndex + 2 <= 34 ? "Lunch Duty" : "Break Duty";
-              }
-
-              const tr = document.createElement("tr");
-              tr.innerHTML = `
-                <td class="px-4 py-2">${label}</td>
-                <td class="px-4 py-2 font-semibold">${match}</td>
-                <td class="px-4 py-2">${leftData.map(d => `🔎 ${d}`).join("<br>")}</td>
-                <td class="px-4 py-2">${detailText}</td>
-                <td class="px-4 py-2 text-xs text-gray-500">Row ${rowIndex + 2}, Col ${colMatch + 1}</td>
-              `;
-              resultsDiv.appendChild(tr);
-            }
+            });
           });
         } catch (err) {
-          console.error(err);
+          console.error(`Failed to load data from ${name}`, err);
         }
       }
     });
