--- a/search.html
+++ b/search.html
@@ -40,7 +40,7 @@
   <div class="container">
     <h1 class="text-xl font-bold mb-4 text-pink-600 drop-shadow text-center">
       🔎 Prefect Duties Search (Cafe, Assembly, Latecomers) 
-      <span class="text-lg text-gray-600 font-normal"> (⛘ Not for Probies)</span>
+      <span class="text-lg text-gray-600 font-normal"> (Not for Probies)</span>
     </h1>
     <div class="mb-6 flex flex-col sm:flex-row gap-2 w-full items-center justify-center">
       <input id="searchInput" type="text" placeholder="Your name..."
