--- a/search.html
+++ b/search.html
@@ -76,7 +76,7 @@
     const sheetConfigs = [
       { sheetId: "11pxAig2ID-c8vigH-5ADpOeshg8GkirngYnAt07iBSA", name: "APR 25", label: "Latecomers", range: "A7:Z13", colMatch: "any", left: 2 },
       { sheetId: "1mMXUsCn9_TIsB8BXHreUiAsy_N0B8tDsiCkKmcLEcJc", name: "AS 15-4  floor markers duty ", label: "Assembly", range: "A1:Z1000", colMatch: "any", left: 2 },
-      { sheetId: "1UkNYiSuW_hNHcCxlssbUstyrhUBRLePJVCgOYwYmpVc", name: "LOWER SEC APR", label: "Break/Lunch", range: "A1:C1000", colMatch: 1 },
+      { sheetId: "1UkNYiSuW_hNHcCxlssbUstyrhUBRLePJVCgOYwYmpVc", name: "LOWER SEC APR", label: "Break/Lunch", range: "B1:C1000", colMatch: 1 },
       { sheetId: "1UkNYiSuW_hNHcCxlssbUstyrhUBRLePJVCgOYwYmpVc", name: "UPPER SEC APR", label: "Break/Lunch", range: "A1:C1000", colMatch: 1 },
       { sheetId: "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo", name: "ONSITE - CAFETERIA (A)", label: "Break/Lunch & Probies A", range: "A1:Z1000", colMatch: "any", dutyOffset: -1, detailOffsets: [-2, -3] },
       { sheetId: "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo", name: "ONSITE - CAFETERIA (B)", label: "Break/Lunch & Probies B", range: "A1:Z1000", colMatch: "any", dutyOffset: -1, detailOffsets: [-2, -3] },
