--- a/search.html
+++ b/search.html
@@ -67,7 +67,11 @@
   <footer class="mt-10 text-sm text-gray-800 font-bold">
     <p id="updatedDate" class="mt-2 text-sm text-gray-800 font-bold">Updated on : 13 April 2025</p>
     <p class="mt-2 text-sm text-gray-500 font-normal">
-      Note: Search using your unique name (e.g. Aki Ai, reza, or oznur instead of eliza because there is a probie Elizabeth). Use at your own discretion. If you see incomplete data that means the main dutysheet is incomplete as well. Suggestions are always welcomed (and I won’t say no to free coffee).
+      Note: Search using your unique name (e.g. Aki Ai, reza, or oznur instead of eliza because there is a probie Elizabeth). Data is pulled from <a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0202451_student_srikdu_edu_my/EbwbJ-Ko4ZJJjcUqZCfhduIBwq0dFib7FBZydV0gRIE9ag?e=PeUiDW" target="_blank" rel="noopener noreferrer">Latecomers Duty Sheet 2024</a>
+,<a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0171284_student_srikdu_edu_my/EcXelRiJ3qZKhxTF53EQfDcBlCgykJZnlPq9PDdHZk267Q?e=sO9VYz" target="_blank" rel="noopener noreferrer">ASSEMBLY DUTY SHEET</a>
+ ,<a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0203394_student_srikdu_edu_my/EUTa8clmRqJFpp2dUwmepiYB6ZYLkp5SunE5JQ4z1zvWJg?e=OBzRny" target="_blank" rel="noopener noreferrer">BREAK & LUNCH DUTY LIST APRIL 2025</a>
+, and <a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0203394_student_srikdu_edu_my/EQmKLO0fHJdLhq8rMtduIPoB4yS7pV_JtUEF2Oe5Zj7AEg?e=BNT18P" target="_blank" rel="noopener noreferrer">PROBATIONARY PREFECTS DUTY SHEET 2025</a>
+. Use at your own discretion. If you see incomplete data that means the main dutysheet is incomplete as well. Suggestions are always welcomed (and I won’t say no to free coffee).
     </p>
     <p class="mt-7 text-center text-sm font-semibold shine">an initiative by Tan Sebastian Poe Ryu©</p>
   </footer>
