--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="utf-8" />
-  <title>Prefect Dashboard</title>
+  <title>Duties Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .container {
@@ -39,7 +39,7 @@
 <body class="bg-gradient-to-br from-pink-100 via-blue-100 to-purple-100 min-h-screen flex flex-col items-center p-4 pt-6">
   <div class="container">
     <h1 class="text-xl font-bold mb-4 text-pink-600 drop-shadow text-center">
-      🔎 Prefect Duties Search (Cafe, Assembly, Latecomers) 
+      🔎 Prefect Duties Search (Break/Lunch, Assembly & Latecomers) 
       <span class="text-lg text-gray-600 font-normal"> (Not for Probies)</span>
     </h1>
     <div class="mb-6 flex flex-col sm:flex-row gap-2 w-full items-center justify-center">
@@ -67,7 +67,7 @@
   <footer class="mt-10 text-sm text-gray-800 font-bold">
     <p id="updatedDate" class="mt-2 text-sm text-gray-800 font-bold">Updated on : 13 April 2025</p>
     <p class="mt-2 text-sm text-gray-500 font-normal">
-      Note: Search using your unique name (e.g. Aki Ai, reza, or oznur instead of eliza because there is a probie Elizabeth). Data is pulled from <span style="color:blue; font-weight:bold;"><a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0202451_student_srikdu_edu_my/EbwbJ-Ko4ZJJjcUqZCfhduIBwq0dFib7FBZydV0gRIE9ag?e=PeUiDW" target="_blank" rel="noopener noreferrer">Latecomers Duty Sheet</a>
+      Note: Search using your unique name (e.g. Aki Ai, reza, or oznur instead of eliza because there is a probie Elizabeth). Currently the Only Assembly floor markers duties is shown not the other assembly duties. Harap Maaf. Data is pulled from <span style="color:blue; font-weight:bold;"><a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0202451_student_srikdu_edu_my/EbwbJ-Ko4ZJJjcUqZCfhduIBwq0dFib7FBZydV0gRIE9ag?e=PeUiDW" target="_blank" rel="noopener noreferrer">Latecomers Duty Sheet</a>
 ,<a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0171284_student_srikdu_edu_my/EcXelRiJ3qZKhxTF53EQfDcBlCgykJZnlPq9PDdHZk267Q?e=sO9VYz" target="_blank" rel="noopener noreferrer">ASSEMBLY DUTY SHEET</a>
  ,<a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0203394_student_srikdu_edu_my/EUTa8clmRqJFpp2dUwmepiYB6ZYLkp5SunE5JQ4z1zvWJg?e=OBzRny" target="_blank" rel="noopener noreferrer">BREAK & LUNCH DUTY LIST APRIL 2025</a>
 , and <a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0203394_student_srikdu_edu_my/EQmKLO0fHJdLhq8rMtduIPoB4yS7pV_JtUEF2Oe5Zj7AEg?e=BNT18P" target="_blank" rel="noopener noreferrer">PROBATIONARY PREFECTS DUTY SHEET 2025</a></span>
