--- a/search.html
+++ b/search.html
@@ -65,7 +65,7 @@
     </table>
   </div>
   <footer class="mt-10 text-sm text-gray-800 font-bold">
-    <p id="updatedDate" class="mt-2 text-sm text-gray-800 font-bold">Updated on : 13 April 2025</p>
+    <p id="updatedDate" class="mt-2 text-sm text-gray-800 font-bold">Updated on : 13 April 2025. Duties shown are for this current week unless stated otherwise</p>
     <p class="mt-2 text-sm text-gray-500 font-normal">
       Note: Search using your unique name (e.g. Aki Ai, reza, or oznur instead of eliza because there is a probie Elizabeth). Currently the Only Assembly floor markers duties is shown not the other assembly duties. Harap Maaf. Data is pulled from <span style="color:blue; font-weight:bold;"><a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0202451_student_srikdu_edu_my/EbwbJ-Ko4ZJJjcUqZCfhduIBwq0dFib7FBZydV0gRIE9ag?e=PeUiDW" target="_blank" rel="noopener noreferrer">Latecomers Duty Sheet</a>
 ,<a href="https://srikdu-my.sharepoint.com/:x:/g/personal/0171284_student_srikdu_edu_my/EcXelRiJ3qZKhxTF53EQfDcBlCgykJZnlPq9PDdHZk267Q?e=sO9VYz" target="_blank" rel="noopener noreferrer">ASSEMBLY DUTY SHEET</a>
