--- a/search.html
+++ b/search.html
@@ -183,7 +183,7 @@
                   <td class="px-4 py-2 font-semibold break-words max-w-[160px]">${cell}</td>
                   <td class="px-4 py-2 break-words max-w-[160px]">🔎 ${duty}</td>
                   <td class="px-4 py-2 break-words max-w-[200px]">${details.join("<br>")}</td>
-                  <td class="px-4 py-2 text-xs text-gray-500 whitespace-nowrap">Row ${rowIndex + 2}, Col ${colIndex + 1}</td>
+                  <td class="px-4 py-2 text-[0.5rem] text-gray-500 whitespace-nowrap">Row ${rowIndex + 2}, Col ${colIndex + 1}</td>
                 `;
                 resultsDiv.appendChild(tr);
               }
