--- a/search.html
+++ b/search.html
@@ -81,7 +81,7 @@
   </div>
 
   <footer class="mt-10 text-sm text-gray-800 font-bold px-4 text-center">
-    <p id="updatedDate" class="mt-2">Updated on : 13 April 2025. Duties shown are for this current week unless stated otherwise</p>
+    <p id="updatedDate" class="mt-2">Updated on : 13 April 2025. </p>
     <p class="mt-2 text-sm text-gray-500 font-normal">
       Note: Search using your unique name (e.g. Aki Ai, reza, or oznur instead of eliza because there is a probie Elizabeth). Currently the Only Assembly floor markers duties due to formatting reasons. Harap Maaf. Data is pulled from 
       <span style="color:blue; font-weight:bold;">
