--- a/search.html
+++ b/search.html
@@ -92,7 +92,7 @@
       </span>.
       Use at your own discretion. Suggestions are always welcomed (and I won’t say no to free coffee).
     </p>
-    <p class="mt-7 text-center text-sm font-semibold shine">an initiative by Tan Sebastian Poe Ryu©</p>
+    <p class="mt-7 text-center text-sm font-semibold shine">A Project by Tan Sebastian Poe Ryu ©</p>
   </footer>
 
   <script>
